# cctelegram

./: .env.example  .gitignore  .mcp.json  .ossf-scorecard.yml  .releaserc.json  .snyk  CHANGELOG.md  CI-CD-PIPELINE.md  COMPRESSION_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.backup  GETTING-STARTED.md  ISSUES_TO_RESOLVE.md  LICENSE  PERFORMANCE_VALIDATION_REPORT.md  QA_COMPREHENSIVE_REVIEW.md  QA_DETAILED_ISSUES.md  QA_RECOMMENDATIONS.md  QUICKSTART.md  README.md  README_QA_REVIEW.md  RELEASE_NOTES_v0.8.5.md  RELEASE_NOTES_v1.9.0.md  SECURITY.md  SECURITY_AUDIT_MCP-Server.md  SECURITY_AUDIT_REPORT.md  SECURITY_AUDIT_REPORT_v2.md  SESSION_SUMMARY_2025-08-05.md  TASK-23-5-COMPLETION-REPORT.md  TASK-24-3-STRUCT-CLEANUP-ANALYSIS.md  TASK-27-6-COMPLETION-REPORT.md  TASK-39-3-DYNAMIC-BUFFER-IMPLEMENTATION.md  TASK-39-AGENT-DEPLOYMENT.md  build.rs  config.example.toml  docker-compose.yml  example_event.json  package-lock.json  package.json  (+6 more)
.claude/: settings.json
.claude/agents/: deploy-agents.sh  task39-documentation.md  task39-orchestration.md  task39-project-manager.md  task39-taskmaster.md
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci-cd-pipeline.yml  coverage-quality-gates.yml  deployment-pipeline.yml  performance-regression.yml  pipeline-monitoring.yml  security-enhanced.yml  security-vulnerability-scanning.yml  slsa-provenance.yml
.github/workflows-disabled/: ci-cd-pipeline.yml  coverage-quality-gates.yml  docs-quality-gates.yml  quality-gates.yml  scorecard.yml
.serena/: project.yml
.serena/memories/: architecture_and_patterns.md  code_style_and_conventions.md  project_overview.md  suggested_commands.md  system_utilities_darwin.md  task_completion_checklist.md
.taskmaster/: config.json  state.json
.taskmaster/docs/: architecture.md  prd.txt
.taskmaster/progress/: alpha-status.json  beta-status.json  coordination-protocol.md  delta-status.json  gamma-status.json
.taskmaster/reports/: task-complexity-report.json
.taskmaster/subagent-assignments/: task-34-delegation.md
.taskmaster/tasks/: task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  task_019.txt  task_020.txt  task_021.txt  task_022.txt  task_023.txt  task_024.txt  task_025.txt  task_026.txt  task_027.txt  task_028.txt  task_029.txt  task_030.txt  task_031.txt  task_032.txt  task_033.txt  task_034.txt  task_035.txt  task_036.txt  task_037.txt  task_038.txt  task_039.txt  task_040.txt  task_041.txt  tasks.json  tasks.json.backup
.zap/: rules.tsv
@docs/: README.md
@docs/mcp-server/: README.md
@docs/reference/: EVENT_SYSTEM.md  FEATURES.md  IMPLEMENTATION_SUMMARY.md
@docs/reports/: README.md  TASK-24-1-COMPILATION-ANALYSIS-REPORT.md  TASK-24-5-DEPENDENCY-CLEANUP-REPORT.md
@docs/security/: DEVELOPMENT_SECURITY_GUIDELINES.md  SECURITY-SCAN-REPORT.md  SECURITY_AUDIT_MCP-Server.md  SECURITY_AUDIT_REMEDIATION_MCP-Server.md  SECURITY_AUDIT_REPORT_v2.md
@docs/setup/: ENABLE-CICD.md  QUICKSTART.md
@test/: docker-compose.integration-test.yml  test_app.sh
benches/: deduplication_performance.rs
docs/: API_REFERENCE.md  AUTOMATED-VULNERABILITY-SCANNING.md  CONTRIBUTING.md  EVENT_SYSTEM.md  FILE_DEBOUNCING.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  LARGE_MESSAGE_PROTOCOL.md  MESSAGE_PERSISTENCE.md  MONITORING_SYSTEM.md  QUEUE_MANAGER.md  QUICK_REFERENCE.md  README.md  REMOTE_WORKFLOW.md  SECURITY.md  TROUBLESHOOTING.md  architecture.md
docs/administration/: README.md  deployment.md  maintenance.md  monitoring.md  security-guide.md
docs/components/: benchmarking.md
docs/development/: CONTRIBUTING.md  README.md  api-reference.md  architecture.md  testing.md
docs/mcp-server/: COVERAGE_AND_QUALITY_METRICS.md  README.md  RESILIENCE_INTEGRATION.md  SECURITY-HEADERS.md  markdown-link-check.json  package.json  versions.json
docs/monitoring/: ENHANCED_MONITORING_SETUP.md
docs/qa/: README_QA_REVIEW.md
docs/reference/: EVENT_SYSTEM.md  FEATURES.md  IMPLEMENTATION_SUMMARY.md  MONITORING_SYSTEM.md  QUICK_REFERENCE.md  README.md  VISUAL-DESIGN-STANDARDS.md  changelog-archive.md  configuration.md  link_validation_report.md  link_validation_script.py  migration-guides.md
docs/reports/: DOCUMENTATION-HUB-CREATION-REPORT.md  DOCUMENTATION-OPTIMIZATION-FINAL-REPORT.md  HEALTH_FIX_SUMMARY.md  (+9 more)
examples/: deduplication_demo.rs  file_debouncing_demo.rs  message_persistence_demo.rs  monitoring_demo.rs  performance_validation_demo.rs  retry_demo.rs  test-prometheus-metrics.rs  test_queue_manager.rs
mcp-server/: .dockerignore  .env.example  .eslintrc.js  .gitignore  .nycrc.json  ANALYSIS_REPORT.md  DOCUMENTATION_FRAMEWORK_SUMMARY.md  Dockerfile  Dockerfile.tier-mocks  README.md  SECURITY-VULNERABILITY-ANALYSIS.md  build-core-only.js  cctelegram-mcp-server-1.4.0.tgz  install.sh  jest.config.js  package-lock.json  package.json  playwright.config.ts  quality-gates.json  security-audit-full.json  stryker.conf.json  task-15-7-completion-report.md  test-build.js  test-mcp-functionality.js  test-server.js  tsconfig.build.json  tsconfig.core.json  tsconfig.json  typescript-error-analysis.md  typescript-error-audit-report.md  validate-task-15-integration.js
monitoring/: alert_rules.yml  docker-compose.monitoring.yml  prometheus.yml
release-v0.8.5-v1.8.5/: RELEASE_NOTES.md
scripts/: cctelegram-agent.js  cctelegram-agent.service  performance_monitor.sh  scorecard-compare.py  security-config-check.py  security-setup.sh  security-validation.sh  setup-agent.sh  troubleshoot.sh  validate-task-23-4.js
src/: integration_example.rs  internal_processor.rs  lib.rs  main.rs  test_internal_processor.rs  tier_orchestrator.rs
tests/: demo_dedup_basic.db-shm  demo_dedup_performance.db-shm  demo_dedup_performance.db-wal  docker-compose.integration-test.yml  integration_deduplication.rs  integration_tests.rs  test_dedup_integration_bc9336b8-1f85-42c3-aedf-8c2de56bee85.db-shm  test_dedup_integration_bc9336b8-1f85-42c3-aedf-8c2de56bee85.db-wal  test_e2e_dedup_1068924d-dca3-40f0-b55e-05cdec1943f4.db  test_mcp.sh  test_tier2.rs
(+1091 files in other folders)
